[gd_scene load_steps=4 format=3 uid="uid://di87jblvuxi21"]

[ext_resource type="Texture2D" uid="uid://52rr0g8p34wg" path="res://images/factory.png" id="1_4wq18"]
[ext_resource type="Script" uid="uid://trkb6k806x08" path="res://scripts/ui/land_panel.gd" id="1_hnyrg"]
[ext_resource type="Texture2D" uid="uid://bqnjie5smya7t" path="res://images/shop.png" id="2_hnyrg"]

[node name="LandPanel" type="Panel"]
custom_minimum_size = Vector2(0, 200)
script = ExtResource("1_hnyrg")

[node name="CountryLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 40.0
scale = Vector2(2, 2)
text = "Romania"

[node name="FactoriesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 138.0
offset_right = 138.0
offset_bottom = 162.0
scale = Vector2(2, 2)
text = "0/1"

[node name="FactoryLabelSprite" type="Sprite2D" parent="FactoriesLabel"]
position = Vector2(-20, 7)
scale = Vector2(3, 3)
texture = ExtResource("1_4wq18")

[node name="ShopLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 138.0
offset_right = 594.0
offset_bottom = 162.0
scale = Vector2(2, 2)
text = "0/2"

[node name="ShopLabelSprite" type="Sprite2D" parent="ShopLabel"]
position = Vector2(-15, 14)
scale = Vector2(3, 3)
texture = ExtResource("2_hnyrg")

[node name="BuyFactoryButton" type="Button" parent="." groups=["buy_button"]]
layout_mode = 0
offset_left = 193.0
offset_top = 140.0
offset_right = 454.0
offset_bottom = 176.0
text = "Buy factory"

[node name="Label" type="Label" parent="BuyFactoryButton"]
modulate = Color(0.61, 0.61, 0.61, 1)
layout_mode = 0
offset_left = 2.0
offset_top = -30.0
offset_right = 309.0
offset_bottom = -4.0
text = "Cost: $500000"

[node name="BuyShopButton" type="Button" parent="." groups=["buy_button"]]
layout_mode = 0
offset_left = 658.0
offset_top = 142.0
offset_right = 912.0
offset_bottom = 178.0
text = "Buy shop"

[node name="Label" type="Label" parent="BuyShopButton"]
modulate = Color(0.61, 0.61, 0.61, 1)
layout_mode = 0
offset_left = 4.0
offset_top = -28.0
offset_right = 279.0
text = "Cost: $500000"

[node name="BuyLandButton" type="Button" parent="." groups=["buy_button"]]
layout_mode = 0
offset_left = 557.0
offset_top = 7.0
offset_right = 784.0
offset_bottom = 43.0
text = "Buy land"

[node name="Label" type="Label" parent="BuyLandButton"]
modulate = Color(0.61, 0.61, 0.61, 1)
layout_mode = 0
offset_left = 236.0
offset_top = 7.0
offset_right = 374.0
offset_bottom = 31.0
text = "$50000"
